# yosari

./: .gitignore  .postcssrc.json  Cargo.toml  README.md  jsconfig.json  package.json  tailwind.config.js
.parcel-cache/: 33f37f8ecb2de4ba.txt  5061a796c6e7fb72  760d832e30009c57  9c82d37f8c27fbbb  a384f0ec43b99fbc  lock.mdb
client/src/: cover.ts  cviewer.ts  home.html  home.js  home.ts  layout.js  login.js  login.ts  mplayer.ts  navbar.ts  uploader.ts
config/: development.yaml  test.yaml
entity/: Cargo.toml
entity/src/: manga.rs
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231017_024420_create_manga_table.rs  m20240106_060912_mangas.rs
src/: app.rs  lib.rs  main.rs
src/controllers/: manga.rs  mod.rs  music.rs
src/handlers/: manga.rs
src/models/: manga.rs  mod.rs
src/models/_entities/: manga.rs  mod.rs  prelude.rs
tests/models/: mangas.rs  mod.rs
tests/tasks/: seed.rs
