[package]
name = "yosari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
futures = "0.3.28"
tower = {version = "0.4", features = ["full"]}
tower-http = {version = "0.4.4", features=["cors", "trace"]}
sea-orm = {version = "0.12.1", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"]}
tokio = { version = "1.0", features = ["full"] }
tokio-util = {version = "0.7.9", features = ["io"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
glob = "0.3.1"