[package]
name = "yosari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["migration"]

[dependencies]
axum = {version = "0.7.3", features = ["multipart", "macros"]}
futures = "0.3.28"
tower = {version = "0.4", features = ["full"]}
tower-http = {version = "0.5.0", features=["cors", "trace"]}
sea-orm = { version = "0.12.4", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = {version = "0.7.9", features = ["io"]}
glob = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
zip = "0.6"
anyhow = "1"
tempfile = "3.8"
infer = "0.15"
async-recursion = "1.0"
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
walkdir = "2"
uuid = {version = "1.6.0", features = ["fast-rng", "v4"]}
stretto = { version = "0.8", features = ["async"] }
migration = {path = "migration"}
pdfium-render = "0.8.16"
image = "0.24.7"
loco-rs = { version = "0.1.9" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[[bin]]
name = "yosari-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.1.9", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
